<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="landingViewModel"
            type="com.example.movieapplication.ui.landing.LandingViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_16dp"
            android:background="@color/black"
            android:paddingHorizontal="@dimen/margin_padding_16dp"
            android:paddingVertical="@dimen/margin_padding_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="@id/btnLogin"
                app:layout_constraintEnd_toEndOf="@id/btnLogin"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:onClick="@{clickListener}"
                android:paddingVertical="@dimen/margin_padding_16dp"
                android:text="@string/login"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tvHeading"/>

            <TextView
                android:id="@+id/tvSignUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="@id/btnLogin"
                app:layout_constraintEnd_toEndOf="@id/btnLogin"
                android:text="@string/not_a_user_sign_up_here"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/margin_padding_32dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintBottom_toTopOf="@id/btnSignUp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8dp"
                android:onClick="@{clickListener}"
                android:paddingVertical="@dimen/margin_padding_16dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignUpText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>