<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signUpViewModel"
            type="com.example.movieapplication.ui.signup.SignUpViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_16dp"
            android:background="@color/black"
            android:paddingHorizontal="@dimen/margin_padding_16dp"
            android:paddingVertical="@dimen/margin_padding_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/vMain" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeading">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={signUpViewModel.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="@={signUpViewModel.userNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserProfession"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                app:boxStrokeWidth="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconDrawable="@drawable/ic_down"
                app:endIconMode="dropdown_menu"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserNumber">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etUserProfession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/choose_profession"
                    android:inputType="none"
                    android:focusable="false"
                    android:padding="@dimen/margin_padding_8dp"
                    android:text="@={signUpViewModel.userProfession}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserProfession">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_e_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={signUpViewModel.userEmail}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                app:endIconMode="password_toggle"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={signUpViewModel.userPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:onClick="@{clickListener}"
                android:paddingVertical="@dimen/margin_padding_16dp"
                android:text="@string/sign_me_up"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>