<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.movieapplication.ui.login.LoginViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_16dp"
            android:background="@color/black"
            android:paddingHorizontal="@dimen/margin_padding_16dp"
            android:paddingVertical="@dimen/margin_padding_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/vMain" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeading">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_e_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={loginViewModel.userEmail}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                app:endIconMode="password_toggle"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={loginViewModel.userPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:onClick="@{clickListener}"
                android:paddingVertical="@dimen/margin_padding_16dp"
                android:text="@string/login"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUserPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>